--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -24,14 +24,13 @@ crossorigin="anonymous"></script>
 </head>
 <body class="loader">
   <app-root>
-    <div>
-      <div class="spinner">
-        <div class="spinner_1"></div>
-        <div class="spinner_2"></div>
-        <div class="spinner_3"></div>
-        <div class="spinner_4"></div>
-      </div>
-    </div>
+        <div class="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
   </app-root>
 </body>
 </html>
