--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,13 @@ crossorigin="anonymous"></script>
 </head>
 <body class="loader">
   <app-root>
-    <div>
-      <div class="spinner">
-        <div class="spinner_1"></div>
-        <div class="spinner_2"></div>
-        <div class="spinner_3"></div>
-        <div class="spinner_4"></div>
-      </div>
-    </div>
+        <div class="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
   </app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
